--- a/css/sections/intro.css
+++ b/css/sections/intro.css
@@ -1,50 +1,67 @@
-.intro {
-  display: flex;
-  flex-direction: column;
-  margin-inline: var(--spacing);
-  text-align: center;
-  gap: 25px;
-}
-.intro__navigation {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 35px;
+:root {
+  --red-accent: #c92e2f;
+  --font-family-primary: "Baskerville";
 }
 
-.intro__navigation__language {
-  display: flex;
-  align-items: flex-end;
-  
+/* Mobie version */
+@media screen and (max-width: 390px) {
+  .intro {
+    display: flex;
+    flex-direction: column;
+    margin-inline: var(--spacing);
+    text-align: center;
+    gap: 25px;
+  }
+  .intro__navigation {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+  }
+
+  .intro__navigation__language {
+    display: flex;
+    align-items: flex-end;
+  }
+
+  .intro__title,
+  .intro__loveStory {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    font-size: 2.5em;
+  }
+
+  .intro__title--small {
+    font-size: 25px;
+  }
+
+  .intro__loveStory {
+    display: flex;
+    justify-content: center;
+  }
+
+  .intro__body {
+    font-size: 20px;
+  }
+
+  .intro__body--red {
+    font-size: 16px;
+    color: var(--red-accent);
+  }
+
+  .intro__arrows {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+  }
 }
 
-.intro__title, .intro__loveStory {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  font-size: 50px;
+/* Ipad 11 inch - Verion */
+@media screen and (min-width: 834px) and (max-width: 1511px) {
 }
 
-.intro__title--small{
-  font-size: 25px;
-}
+/* Mackbook pro 14 inch - Verion */
 
-.intro__loveStory {
-  display: flex;
-  justify-content: center;
-}
-
-.intro__body {
-  font-size: 20px;
-}
-
-.intro__body--red {
-  font-size: 16px;
-  color: red;
-}
-
-.intro__arrows {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
+@media screen and (min-width: 1512px) {
 }
