--- a/css/sections/intro.css
+++ b/css/sections/intro.css
@@ -11,6 +11,7 @@
 .intro__navigation {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 2rem;
 }
 
 .intro__navigation__language {
@@ -40,6 +41,7 @@
 .backgroundAdolphe {
   position: absolute;
   z-index: -1;
+  right: 0.2rem;
 }
 
 .intro__body--red {
@@ -54,8 +56,12 @@
 
 /* Mobie version */
 @media screen and (max-width: 390px) {
+  body {
+    background: url("../assets/mobile/background-noise.png");
+    background-repeat: no;
+  }
   .intro {
-    gap: 30px;
+    gap: 40px;
     line-height: 25px;
     margin-inline: 20px;
     margin-block: 20px;
@@ -63,10 +69,6 @@
 
   .intro__logoMim {
     width: 21%;
-  }
-
-  .intro__navigation {
-    margin-bottom: 25px;
   }
 
   .intro__navigation__language {
@@ -87,7 +89,8 @@
   }
 
   .backgroundAdolphe {
-    top: 9.8rem;
+    top: 12rem;
+    right: 2rem;
   }
 
   .intro__body {
@@ -113,9 +116,13 @@
 
 /* Ipad 11 inch - Verion */
 @media screen and (min-width: 834px) and (max-width: 1511px) {
+  body {
+    background: url("../assets/mobile/background-noise.png");
+    background-repeat: no-repeat;
+  }
   .intro {
-    gap: 60px;
-    line-height: 50px;
+    gap: 40px;
+    line-height: 3rem;
     margin-inline: 50px;
     margin-block: 40px;
   }
@@ -130,8 +137,9 @@
 
   .intro__title,
   .intro__loveStory {
-    gap: 10px;
-    font-size: 3em;
+    gap: 20px;
+    margin-bottom: 20px;
+    font-size: 4em;
   }
 
   hr {
@@ -140,11 +148,11 @@
   .backgroundAdolphe {
     top: 19rem;
     left: 10.5rem;
-    width: 50%;
+    width: 52.5%;
   }
 
   .adolpheSax {
-    max-width: 55%;
+    width: 420px;
   }
 
   .intro__body {
@@ -167,6 +175,11 @@
 /* Mackbook pro 14 inch - Verion */
 
 @media screen and (min-width: 1512px) {
+  body {
+    background-image: url("../../assets/desktop/backgroud-noice.png");
+    background-repeat: no-repeat;
+  }
+
   .intro {
     display: flex;
     flex-direction: column;
@@ -184,7 +197,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: flex-end;
-    gap: 10%;
+    gap: 150px;
     margin-bottom: 45px;
   }
 
@@ -196,12 +209,8 @@
   .intro__loveStory {
     justify-content: flex-start;
     align-items: flex-start;
-    gap: 10px;
-    font-size: 6em;
-  }
-
-  .intro__loveStory--img {
-    width: 28%;
+    gap: 20px;
+    font-size: 5em;
   }
 
   .intro__title--small {
@@ -229,7 +238,7 @@
 
   .intro__body {
     font-size: 30px;
-    width: 50%;
+    width: 40%;
   }
 
   .intro__body--red {
@@ -239,6 +248,7 @@
 
   .intro__arrows {
     gap: 30px;
+    justify-content: flex-start;
   }
 
   .arrows {
