--- a/css/sections/intro.css
+++ b/css/sections/intro.css
@@ -4,10 +4,10 @@
 
 .intro {
   display: grid;
-  height: 100vh;
+  min-height: 100vh;
   grid-template-columns: auto;
-  grid-template-rows: 15vh 10vh 40vh 10vh 10vh 10vh;
-  gap: 0.4rem;
+  grid-template-rows: 10vh 10vh 40vh 10vh 10vh 10vh;
+  gap: 0.8rem;
 
   margin-block: 3vh;
   margin-inline: 3vh;
@@ -21,9 +21,18 @@
 .intro__body {
   display: grid;
   grid-row: 2;
-  grid-template-rows: 20px 20px;
+  grid-template-rows: 30% 10%;
   place-items: center;
-  align-content: bottom;
+  align-content: center;
+}
+.intro__title {
+  font-family: AlaChamp;
+  font-size: 8vmin;
+}
+
+.intro__title--small {
+  font-size: 3vmin;
+  font-family: Baskerville, italic;
 }
 
 .loveStory {
@@ -42,28 +51,40 @@
 }
 
 .intro__img {
+  grid-row: 3;
   width: 40vh;
   background-image: url("../../assets/mobile/header/background-behind-adolphe.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-
 }
 
 .intro__text,
 .intro__text--scroll {
   text-align: center;
+  align-self: center;
+}
+
+.intro__text {
+  grid-row: 4;
 }
 
 .intro__text--scroll {
+  grid-row: 5;
   color: red;
+  align-self: flex-start;
 }
 
 .intro__arrows {
+  grid-row: 6;
   display: flex;
   gap: 20px;
   justify-content: center;
   align-items: center;
+}
+
+.arrows {
+  width: 10%;
 }
 
 /* Mobie version  */
@@ -73,255 +94,35 @@
 /* Ipad version */
 @media screen and (min-width: 834px) and (max-width: 1511px) {
   .intro {
-    gap: 0.4rem;
+    display: grid;
+    min-height: 100vh;
+    grid-template-columns: auto;
+    grid-template-rows: 5vh 15vh 35vh 10vh 8vh 15vh;
+    gap: 2rem;
 
     margin-block: 5vh;
     margin-inline: 10vw;
   }
-}
 
-/* .intro__navigation {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 2rem;
-}
-
-.intro__navigation__language {
-  display: flex;
-  align-items: flex-end;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-
-.intro__title,
-.intro__loveStory {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2.5em;
-}
-
-.intro__title--small {
-  font-size: 1.1rem;
-}
-
-.intro__loveStory {
-  display: flex;
-  justify-content: center;
-}
-
-.backgroundAdolphe {
-  position: absolute;
-  z-index: -1;
-  right: 0.2rem;
-}
-
-.intro__body--red {
-  font-family: Baskerville italic;
-  color: var(--red-accent);
-}
-
-.intro__arrows {
-  display: flex;
-  justify-content: center;
-}
-
-/* Mobie version */
-/* @media screen and (min-width: 390px) and (max-width: 834px) { */
-/* body {
-    background: url("../assets/mobile/header/background-noise.png");
-    background-repeat: no;
-  }
-  .intro {
-    line-height: 25px;
-    margin-inline: 20px;
-    margin-block: 20px;
-  }
-
-  .intro__logoMim {
-    width: 21%;
-  }
-
-  .intro__navigation__language {
-    display: flex;
-    align-items: flex-end;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  }
-
-  .intro__title,
-  .intro__loveStory {
-    gap: 20px;
-    font-size: 2.5em;
-  }
-
-  hr {
-    display: none;
-  }
-
-  .backgroundAdolphe {
-    top: 12rem;
-    right: 2rem;
+  .intro__title {
+    gap: 200%;
   }
 
   .intro__body {
-    font-size: 20px;
+    gap: 4vh;
   }
 
-  .intro__body--red {
-    font-size: 16px;
+  .loveStory {
+    top: 12px;
   }
-
-  .intro__arrows {
-    gap: 20px;
-  }
-
-  .arrows {
-    width: 10%;
-  }
-
-  .intro__loveStory--img {
-    width: 60%;
-  } */
-
-/* Ipad 11 inch - Verion */
-/* @media screen and (min-width: 834px) and (max-width: 1511px) {
-  body {
-    background: url("../assets/mobile/header/background-noise.png");
-    background-repeat: no-repeat;
-  }
-  .intro {
-    gap: 40px;
-    line-height: 3rem;
-    margin-inline: 50px;
-    margin-block: 40px;
-  }
-
-  .intro__logoMim {
-    width: 20%;
-  }
-
-  .intro__navigation {
-    font-size: 20px;
-  }
-
-  .intro__title,
-  .intro__loveStory {
-    gap: 20px;
-    margin-bottom: 20px;
-    font-size: 4em;
-  }
-
-  hr {
-    display: none;
-  }
-  .backgroundAdolphe {
-    top: 19rem;
-    left: 10.5rem;
-    width: 52.5%;
-  }
-
-  .adolpheSax {
-    width: 420px;
-  }
-
-  .intro__body {
-    font-size: 28px;
-  }
-
-  .intro__body--red {
-    font-size: 22px;
-  }
-
-  .intro__arrows {
-    gap: 20px;
-  }
-
-  .arrows {
-    width: 8%;
-  }
-} */
+}
 
 /* Mackbook pro 14 inch - Verion */
-
-/* @media screen and (min-width: 1512px) {
-  body {
-    background-image: url("../../assets/desktop/backgroud-noice.png");
-    background-repeat: no-repeat;
-  }
-
+/* 
+@media screen and (min-width: 1512px) {
   .intro {
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    gap: 40px;
-    margin-inline: 80px;
-    margin-block: 50px;
+    display: grid;
+    grid-template-columns: 40vw 60vw ;
+    border: solid red 2px;
   }
-
-  .intro__logoMim {
-    width: 15%;
-  }
-
-  .intro__navigation {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-end;
-    gap: 150px;
-    margin-bottom: 45px;
-  }
-
-  .intro__navigation__language {
-    font-size: 1.2rem;
-  }
-
-  .intro__title,
-  .intro__loveStory {
-    justify-content: flex-start;
-    align-items: flex-start;
-    gap: 20px;
-    font-size: 5em;
-  }
-
-  .intro__title--small {
-    font-size: 2rem;
-  }
-
-  .intro__loveStory {
-    display: flex;
-    justify-content: flex-start;
-  }
-
-  .backgroundAdolphe {
-    position: absolute;
-    z-index: -1;
-    top: 7.5rem;
-    left: 40rem;
-    width: 55%;
-  }
-
-  .adolpheSax {
-    position: absolute;
-    top: 10rem;
-    left: 40rem;
-  }
-
-  .intro__body {
-    font-size: 30px;
-    width: 40%;
-  }
-
-  .intro__body--red {
-    font-size: 25px;
-    margin-bottom: 50px;
-  }
-
-  .intro__arrows {
-    gap: 30px;
-    justify-content: flex-start;
-  }
-
-  .arrows {
-    width: 6%;
-  }
-}  */
+} */
