--- a/css/sections/intro.css
+++ b/css/sections/intro.css
@@ -81,8 +81,9 @@
 
 /* Mobie version  */
 @media screen and (min-width: 390px) and (max-width: 834px) {
-  body {
-    background-image: url("../assets/mobile/header/background-noise.png");
+  .intro__background {
+    background-image: url("../../assets/mobile/header/background-noise.png");
+    background-repeat: no-repeat;
     background-size: cover;
   }
   p {
@@ -91,14 +92,14 @@
 }
 
 /* Ipad version */
-@media screen and (min-width: 834px) and (max-width: 1511px) {
+@media screen and (min-width: 834px) and (max-width: 1512px) {
   body {
     background-image: url("../assets/mobile/header/background-noise.png");
     background-size: cover;
   }
 
   p {
-    font-size: 1.5em;
+    font-size: 1em;
   }
 
   .intro {
@@ -107,9 +108,6 @@
     grid-template-columns: auto;
     grid-template-rows: 5vh 15vh 35vh 10vh 8vh 15vh;
     gap: 2rem;
-
-    margin-block: 5vh;
-    margin-inline: 10vw;
   }
 
   .intro__title {
@@ -125,7 +123,10 @@
   }
 
   .intro__text--scroll {
-    font-size: 20px;
+    font-size: 1.2em;
+  }
+  p {
+    font-size: 28px;
   }
 }
 
@@ -140,8 +141,6 @@
     display: grid;
     grid-template-columns: 40% 60%;
     grid-template-rows: 10vh 20vh 30vh 10vh 5vh 15vh;
-    margin-block: 7vh;
-    margin-inline: 7vh;
     gap: 1.2rem;
   }
 
@@ -167,12 +166,19 @@
     text-align: left;
   }
 
+  .intro__img {
+    width: 1000px;
+  }
+
   .intro__arrows {
     place-content: flex-start;
     grid-row: 5 / 7;
     gap: 40px;
   }
 
+  .arrows {
+    width: 15%;
+  }
   .intro__text--scroll {
     font-size: 25px;
   }
