--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
   font-weight: 400;
   color: white;
   font-family: Baskerville;
-  font-size: 2.5vw;
+  background-color: #f6efdd;
 }
 
 main {
@@ -45,7 +45,7 @@ img {
   max-width: 100%;
 }
 
-.intro, .sectionTwo {
-  margin-block: 3vh;
-  margin-inline: 3vh;
+.intro,
+.sectionTwo {
+  margin-inline: 5vw;
 }
