--- a/css/sections/intro.css
+++ b/css/sections/intro.css
@@ -41,10 +41,6 @@
   justify-content: center;
   align-items: center;
   place-content: center;
-}
-
-.intro__img {
-  grid-row: 3;
   background-image: url("../../assets/mobile/header/background-behind-adolphe.png");
   background-repeat: no-repeat;
   background-position: center;
@@ -88,6 +84,9 @@
   }
   p {
     font-size: 20px;
+  }
+  .intro__img {
+    width: 500px;
   }
 }
 
