--- a/css/sections/intro.css
+++ b/css/sections/intro.css
@@ -41,7 +41,7 @@
   justify-content: center;
   align-items: center;
   place-content: center;
-  background-image: url("../../assets/mobile/header/background-behind-adolphe.png");
+  background-image: url("../../assets/mobile/intro/background-behind-adolphe.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -62,7 +62,6 @@
   color: red;
   align-self: flex-start;
 }
-
 .intro__arrows {
   grid-row: 6;
   display: flex;
@@ -78,24 +77,21 @@
 /* Mobie version  */
 @media screen and (min-width: 390px) and (max-width: 834px) {
   .intro__background {
-    background-image: url("../../assets/mobile/header/background-noise.png");
+    background-image: url("../../assets/mobile/intro/background-noise.png");
     background-repeat: no-repeat;
     background-size: cover;
   }
   p {
     font-size: 20px;
   }
-  .intro__img {
-    width: 500px;
-  }
 }
 
 /* Ipad version */
 @media screen and (min-width: 834px) and (max-width: 1512px) {
-  body {
-    background-image: url("../assets/mobile/header/background-noise.png");
+  /* .background {
+    background-image: url("../assets/mobile/intro");
     background-size: cover;
-  }
+  } */
 
   p {
     font-size: 1em;
@@ -131,7 +127,7 @@
 
 /* Mackbook pro 14 inch - Verion */
 @media screen and (min-width: 1512px) {
-  body {
+  .intro__background {
     background-image: url("../../assets/desktop/backgroud-noice.png");
     background-size: cover;
   }
