--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url("/css/sections/intro.css");
 @import url("/css/sections/adolphe.css");
 @import url("/css/sections/sectionThree.css");
+@import url("sections/verticalScroll.css");
 @import url("/css/sections/features.css");
 @import url("sections/sapphire.css");
 @import url("sections/family.css");
