--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,6 @@
   /* font-family: Baskerville, italic;
   src: url("../fonts/BaskervilleBoldItalicBT.ttf"); */
 }
-:root {
-  --p-font-size: 20px;
-}
 
 body {
   height: 100%;
@@ -40,10 +37,12 @@ main {
   margin: auto;
   position: relative;
   overflow-x: hidden;
+  background-image: url("../assets/seamless-background.jpeg");
+  z-index: -1;
 }
 
 p {
-  font-size: 2vw;
+  font-size: 3.5vw;
 }
 
 img {
