Fix animation arrows

--- a/css/style.css
+++ b/css/style.css
@@ -60,5 +60,5 @@ img {
 .cutted__background {
   height: 95px;
   background-image: url("../assets/background-cutted.png");
-  background-position: center center;
+  background-position: left left;
 }
