--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,6 @@
 }
 
 body {
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
   font-size: 100%;
   font-family: unibody-8-new, sans-serif;
   font-weight: 400;
@@ -34,7 +31,7 @@ main {
   position: relative;
   overflow-x: hidden;
   background-image: url("../assets/seamless-background.jpeg");
-  z-index: -1;
+  /* z-index: -1; */
 }
 
 p {
