--- a/css/sections/sectionThree.css
+++ b/css/sections/sectionThree.css
@@ -1,10 +1,43 @@
 .background__sectionThree {
   background-color: #f6efdd;
 }
+.sectionThree {
+    height: 100vh;
+    display: flex;
+    z-index: -2;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+  .sectionThree h1 {
+   font-size: 120px;
+   color: rebeccapurple;
+  }
+  .sectionThree img {
+    position: relative;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .flowers {
+    z-index: 1;
+  }
+
+  .head__adolphe {
+    z-index: 2;
+    right: 200px;
+  }
+
+  .saxophone {
+    z-index: 2;
+    left: 200px;
+  }
+
 
 /* Mobie version  */
 @media screen and (min-width: 390px) and (max-width: 834px) {
-  .sectionThree {
+  /* .sectionThree {
     display: grid;
     min-height: 100vh;
     grid-template-columns: 30vw 40vw 30vw;
@@ -28,5 +61,6 @@
     grid-row: 2;
     grid-column: 3;
     align-self: center;
-  }
+  } */
+
 }
