--- a/css/sections/sectionThree.css
+++ b/css/sections/sectionThree.css
@@ -1,66 +1,46 @@
 .background__sectionThree {
   background-color: #f6efdd;
 }
+
 .sectionThree {
-    height: 100vh;
-    display: flex;
-    z-index: -2;
-    justify-content: center;
-    align-items: center;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.sectionThree__images {
+  display: flex;
+  margin-block: 5rem;
+  justify-content: center;
+  align-items: center;
+}
 
+.sectionThree h1 {
+  font-size: 3.5rem;
+  font-family: Alachamp;
+  color: rebeccapurple;
+}
+.sectionThree img {
+  position: relative;
+  width: 100%;
+  object-fit: cover;
+}
 
-  .sectionThree h1 {
-   font-size: 120px;
-   color: rebeccapurple;
-  }
-  .sectionThree img {
-    position: relative;
-    width: 100%;
-    object-fit: cover;
-  }
+.flowers {
+  z-index: 1;
+}
 
-  .flowers {
-    z-index: 1;
-  }
+.head__adolphe {
+  z-index: 2;
+  right: 200px;
+}
 
-  .head__adolphe {
-    z-index: 2;
-    right: 200px;
-  }
-
-  .saxophone {
-    z-index: 2;
-    left: 200px;
-  }
-
+.saxophone {
+  z-index: 2;
+  left: 200px;
+}
 
 /* Mobie version  */
 @media screen and (min-width: 390px) and (max-width: 834px) {
-  /* .sectionThree {
-    display: grid;
-    min-height: 100vh;
-    grid-template-columns: 30vw 40vw 30vw;
-    grid-template-rows: 30vh 40vh 30vh;
-    color: red;
-  }
-
-  .flowers {
-    grid-row: 2;
-    grid-column: 2;
-    align-self: center;
-  }
-
-  .head__adolphe {
-    grid-row: 2;
-    grid-column: 1;
-    align-self: center;
-  }
-
-  .saxophone {
-    grid-row: 2;
-    grid-column: 3;
-    align-self: center;
-  } */
-
 }
