--- a/css/sections/sectionThree.css
+++ b/css/sections/sectionThree.css
@@ -19,7 +19,7 @@
 .sectionThree h1 {
   font-size: 3.5rem;
   font-family: Alachamp;
-  color: rebeccapurple;
+  color: #C92E2F;
 }
 .sectionThree img {
   position: relative;
